[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volforecast"
version = "0.1.0"
description = "Volatility forecasting and signal generation system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "yfinance>=0.2.0",
    "scipy>=1.7.0",
    "arch>=5.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
volforecast = "volforecast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
volforecast = ["*.yaml", "*.json"]
